        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.21 vanilla (kernel.org)
       * Recommended e2fsprogs version: 1.40.11-sun1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
        removed cwd "./" (refer to Bugzilla 14399).

Severity   : enhancement
Bugzilla   : 16573
Description: Export bytes_read/bytes_write count on OSC/OST.

Severity   : normal
Bugzilla   : 16237
Description: Early reply size mismatch, MGC loses connection
Details    : Apply the MGS_CONNECT_SUPPORTED mask at reconnect time so
             the connect flags are properly negotiated.

Severity   : normal
Bugzilla   : 16006
Description: Properly propagate oinfo flags from lov to osc for statfs
Details    : restore missing copy oi_flags to lov requests.

Severity   : enhancement
Bugzilla   : 16581
Description: Add man pages for llobdstat(8), llstat(8), plot-llstat(8),
           : l_getgroups(8), lst(8), routerstat(8)
Details    : included man pages for llobdstat(8), llstat(8),
           : plot-llstat(8), l_getgroups(8), lst(8), routerstat(8)

Severity   : enhancement
Bugzilla   : 16091
Description: configure's --enable-quota should check the
           : kernel .config for CONFIG_QUOTA
Details    : configure is terminated if --enable-quota is passed but
           : no quota support is in kernel

Severity   : normal
Bugzilla   : 13139
Description: Remove portals compatibility
Details    : Remove portals compatibility, not interoperable with releases
	     before 1.4.6

Severity   : normal
Bugzilla   : 15576
Description: Resolve device initialization race
Details    : Prevent proc handler from accessing devices added to the
	     obd_devs array but yet be intialized.

Severity   : enhancement
Bugzilla   : 15308
Description: Update to SLES10 SP2 kernel-2.6.16.60-0.23.

Severity   : enhancement
Bugzilla   : 16190